[package]
name = "fast_vk"
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Eduard Baturin"]
description = "Low-level VK API library designed for millions requests per second"
documentation = "https://docs.rs/fast_vk/0.3.2/fast_vk/"
repository = "https://github.com/kinetus/fast_vk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"

reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15.0"

thiserror = "1.0.32"
anyhow = "1.0.65"

vk_method = "0.2"
vk_execute_compiler = "0.1"

comma_serde_urlencoded = "0.8.1"