[package]
name          = "vk_executive"
version       = "0.8.4"
edition       = "2021"
license       = "MIT"
authors       = ["Eduard Baturin"]
description   = "Relatively low-level VK API library designed for millions requests per second"
documentation = "https://docs.rs/vk_executive"
repository    = "https://github.com/kinetus/vk_executive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
thisvk = ["dep:thisvk", "dep:async-trait"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
http = "0.2"
hyper = { version = "0.14.23", features = ["client", "tcp", "http1"] }
hyper-tls = "0.5"
url = "2.3"

serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"

vk_method           = "0.2"
vk_execute_compiler = "0.1"

comma_serde_urlencoded = "0.8"

thisvk      = { version = "0.2", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
dotenv    = "0.15"
futures   = "0.3"
once_cell = "1"
